2010-03-17  Sam Steingold  <sds@gnu.org>

	* stream.d (find_open_file): add a cast to fix g++ compilation

2010-03-17  Sam Steingold  <sds@gnu.org>

	update gnulib
	* modules/regexp/gllib/stdlib.in.h, modules/regexp/gllib/unistd.in.h:
	* modules/regexp/glm4/stdlib_h.m4, modules/regexp/glm4/unistd_h.m4:
	* modules/syscalls/gllib/sys_socket.in.h:
	* modules/syscalls/gllib/time.in.h, modules/syscalls/gllib/unistd.in.h:
        * modules/syscalls/glm4/sys_socket_h.m4:
        * modules/syscalls/glm4/sys_utsname_h.m4:
        * modules/syscalls/glm4/time_h.m4, modules/syscalls/glm4/unistd_h.m4:
	* build-aux/warn-on-use.h, gllib/langinfo.in.h, gllib/string.in.h:
	* gllib/sys_time.in.h, gllib/unistd.in.h, gllib/wchar.in.h:
	* gllib/wctype.in.h, glm4/gnulib-comp.m4, glm4/langinfo_h.m4:
	* glm4/string_h.m4, glm4/sys_time_h.m4, glm4/unistd_h.m4: update
	* build-aux/c++defs.h: add
	* glm4/wchar_h.m4: rename from glm4/wchar.m4
	* glm4/wctype_h.m4: rename from glm4/wctype.m4

2010-03-17  Sam Steingold  <sds@gnu.org>

	* Makefile.devel ($(MAKEFILE_IN)): transform just generated
	Makefile.in to add gnulib prefix substitution to rules generating
	headers which come from build-aux

2010-03-16  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_CLISP): when running on woe32, we must ensure
	that cl_cv_clisp_libdir contains no colons because this will
	confuse make ("multiple target patterns") when $(CLISP_LIBDIR)
	appears in the list of dependencies
	* makemake.in (gllib): ditto

2010-03-16  Sam Steingold  <sds@gnu.org>

	* makemake.in, modules/regexp/Makefile.in,
	* modules/syscalls/Makefile.in, modules/wildcard/Makefile.in (gllib):
	pass build_aux= to make in subdir

2010-03-04  Sam Steingold  <sds@gnu.org>

	* spvw.d (INVALID_ARG): also "return 1"
	(parse_options): simplified based on the above

2010-03-03  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (realloc_threads_symvalues): expand all threads symvalues
	tables and initialize new cells to SYMVALUE_EMPTY